css/style.css
@media (min-width: 576px) {
	.container { max-width: 720px; }
}

@media (min-width: 768px) {
	.container { max-width: 880px; }
}

@media (min-width: 992px) {
	.container { max-width: 1140px; }

	.header-container { height: 95px; }
}

@media (min-width: 1200px) {
	.container {
	    max-width: 1140px;
	}
}

.mission-statement {
	opacity: 0.4;
}

body {
	font-family: Calibri, Candara, Arial, sans-serif;
	color: #000;
	background-image: url("../imgs/parsons_background.png"), url("../imgs/light_noise_diagonal.png");
	background-repeat: no-repeat, repeat;
	background-attachment: local;
	background-position: center top;
	overflow: hidden;
}

h1 { font-family: "eurostile-extended", sans-serif; }

h2 {
	font-size: 14px;
	font-weight: none;
}

h3 {
	font-size: 16px;
	font-weight: bold;
}

p { font-size: 14px; }

.header-container {
	border-bottom: 1px solid #555;
	box-shadow: 0 1px 2px #666;
	background-color: #6D6D6D;
}

a {
	color: #b02029;
}

a:hover {
	color: #F0C5C1;
}

.right-nav-container {
	margin: 0 0 0 auto;
}

@media (max-width: 992px) {
	.navbar-separator { display: none; }
}

.navbar-separator { /*white line between nav items*/
	height: 20px;
	width: 2px;
	margin: 0 2px;
	background-color: #fff;
}

.main-content {
	margin-top: 30px;
}

.card-short { height: 229px; }

.card-tall { height: 488px; }

.card-body-center {
	padding-top: 0px;
	padding-bottom: 0px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

#logo {
	background-color: #fff;
	border: 5px solid #b02029;
	height: 100px;
	width: 100px;
	transform: translate(-12px, 10px);
	margin-right: 20px;
	box-shadow: 2px 2px 2px #444;
}

@media (max-width: 992px) {
	#logo {
		height: 50px;
		width: 50px;
	}
}

#login-card {
	margin-top: 16px;
	height: auto;
}

@media (min-width: 576px) {
	#login-card {
		margin-top: 100px;
	}
}

#parsons-pulse-logo {
	max-width: 300px;
	margin-top: 8px;
	margin-bottom: 8px;
}

.btn-parsons {
	background: #b02029;
	background: linear-gradient(#cc3333, #962029);
  border: none;
  color: #fff;
  font-size: 14px;
	box-shadow: 2px 2px 2px #999;
}

.btn-parsons:hover {
	cursor: pointer;
	color: 	#F0C5C1;
}

.btn-parsons-small {
	width: 60px;
	height: 28px;
	margin-left: 10px;
	float: right;
	padding: 0px;
}

.btn-parsons-large {
	width: 130px;
	height: 28px;
	float: right;
	padding: 0px;
}

.btn-parsons-pulse {
	width: 120px;
}

.form-group {
	margin-bottom: 0px;
}

#search {
	display: block;
	margin-top: 18px;
	height: 24px;
	font-size: 14px;
	font-style: italic;
	box-shadow: inset 2px 2px 2px #999;
}

.fa-search {
	float: right;
	padding-right: 10px;
	transform: translate(0px, -20px);
	color: #999;
}

.company-links {
	flex-direction: row;
	justify-content: space-around;
	padding-top: 15px;
	padding-bottom: 0px;
}

.text-label-items {
	margin-bottom: 16px;
	line-height: 1.15;
	max-width: 130px;
}

.btn-parsons-center {
	display: flex;
	justify-content: center;
}

#btn-login {
	padding: 6px 45px;
}

.login-form {
	margin: 4px 0;
}

.login-icon {
	height: 20px;
}

#CareerOpportunitiesBody {
	position: relative;
	height: 0;
	/*padding-bottom: 20px;
	padding-right: 20px;*/
	overflow: hidden;
}

div.card-body iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: calc(100% - 40px);
	height: calc(100% - 40px);
	border: none;
	overflow-y: scroll;
	margin: 20px;
}

/*-----------------------------------------------------------*/
/*-----------------------------------------------------------*/
/*--------------------Bootstrap Overrides--------------------*/
/*-----------------------------------------------------------*/
/*-----------------------------------------------------------*/

.navbar {
	padding: 0;
}

.navbar-brand {
	font-size: 28px;
	color: #fff;
	text-shadow: 1px 1px 2px #000;
	margin-right: 0;
}

@media (min-width: 992px) {
	.navbar-nav {
		width: 960px;
		height: 30px;
		background-color: #b02029;
		background: linear-gradient(#cc3333, #962029);
		border: none;
		border-radius: .25rem;
		box-shadow: 1px 1px 2px #444;
	    margin: 0 auto;
	    transform: translate(-500px, 37px); /*70px, -15px*/
	    align-items: center;
	}

	.navbar-brand {
		font-size: 32px;
		padding-top: .3125rem;
	    padding-bottom: .3125rem;
	    line-height: inherit;
	}

}

@media (max-width: 576px) {
	.navbar-brand {
		font-size: 16px;
		display: inline-flex;
	}
}

.navbar-toggler {
	margin: 5px 15px 5px 15px;
}

.navbar-dark .navbar-nav .nav-link {
	color: #fff;
}

.nav-link:hover {
	text-decoration: none;
}

.nav-tabs .nav-link .nav-link:hover {
	border: none;
}

.show, .collapsing {
	padding: 10px 15px 0 15px;
}

.show .nav-item, .collapsing .nav-item {
	border-top: .5px solid rgba(255,255,255,.5);
}

.card {
	border: none;
	box-shadow: 0 0 3px #666;
	margin-bottom: 30px;
}

.card-header {
	font-size: 14px;
	font-family: "eurostile-extended", sans-serif;
	background-color: #000;
	border: 2px solid #000;
	border-bottom: none;
	padding: 4px 0px 5px 8px;
	height: 30px;
}

.card-header:first-child { border-radius: .25rem .25rem 0 0; }

.card-title { color: #fff; }

.card-body {
	background-color: #fff;
	border-radius: 0 0 .25rem .25rem;
	border: none;
	border-top: none;
	overflow: hidden;
}

.card-body:hover {
	overflow: auto;
}

.header-container {
	position: relative;
	z-index: 2;
}

.dropdown.nav-item.show {
	padding: 0;
	z-index: 10000;
}

.dropdown-menu {
	position: relative;
	background-color: #b02029;
	padding: 5px;
	box-shadow: 2px 2px 2px #555;
}

.dropdown-item {
	font-size: 14px;
	color: #fff;
	padding: 10px;
}

.dropdown-divider {
	margin: 2px;
}

.justify-content-center {
	padding: 5px;
}

.input-group {
	margin-bottom: 24px;
}

.form-check {
	padding-left: 20px;
	margin-bottom: 24px;
}

.form-control:focus {
	border: 1px solid #aaf;
	box-shadow: none;
}

